Header el alignment fix

--- a/public/less/components/item-detail.less
+++ b/public/less/components/item-detail.less
@@ -535,7 +535,7 @@
 .item-detail .subitem .header .state .assignee,
 .item-detail .subitem .header .state .score,
 .item-detail .subitem .header .state .subitem_checkbox {
-  display:inline-block;
+  float:left;
 }
 .item-detail .subitem .header .state .status {
   width: 65px;
@@ -555,6 +555,7 @@
 
   button,
   img {
+    margin-top: 5px;
     width: 30px;
     height: 30px;
     border-radius: 16px;
